<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aahr.ahanaf.calculator.MainActivity"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1000">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/buttonOne"
                android:id="@+id/button1"
                android:layout_column="0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="25" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buttonTwo"
                android:id="@+id/button2"
                android:layout_column="1"
                android:layout_weight="25" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buttonThree"
                android:id="@+id/button3"
                android:layout_column="2"
                android:layout_weight="25" />

            <Button
                android:text="@string/buttonAdd"
                android:id="@+id/buttonAddId"
                android:layout_column="3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="25" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/buttonFour"
                android:id="@+id/button4"
                android:layout_column="0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="25" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buttonFive"
                android:id="@+id/button5"
                android:layout_column="1"
                android:layout_weight="25" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buttonSix"
                android:id="@+id/button6"
                android:layout_column="2"
                android:layout_weight="25" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buttonSub"
                android:id="@+id/buttonSubId"
                android:layout_column="3"
                android:layout_weight="25" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/buttonSeven"
                android:id="@+id/button7"
                android:layout_column="0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="25" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buttonEight"
                android:id="@+id/button8"
                android:layout_column="1"
                android:layout_weight="25" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buttonNine"
                android:id="@+id/button9"
                android:layout_column="2"
                android:layout_weight="25" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buttonMul"
                android:id="@+id/buttonMulId"
                android:layout_column="3"
                android:layout_weight="25" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/buttonZero"
                android:id="@+id/button0"
                android:layout_column="0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="25" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buttonDot"
                android:id="@+id/buttonDotId"
                android:layout_column="1"
                android:layout_span="2"
                android:layout_weight="25" />

            <Button
                android:text="@string/buttonDiv"
                android:id="@+id/buttonDivId"
                android:layout_column="3"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_weight="25" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buttonC"
                android:id="@+id/buttonCId"
                android:layout_column="0"
                android:layout_weight="25" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buttonMC"
                android:id="@+id/buttonMCId"
                android:layout_column="1"
                android:layout_weight="25" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buttonMCPlus"
                android:id="@+id/buttonMCPlusId"
                android:layout_column="2"
                android:layout_weight="25" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buttonEqual"
                android:id="@+id/buttonEqualId"
                android:layout_column="3"
                android:layout_weight="25" />

        </TableRow>
    </TableLayout>

</LinearLayout>
